- Added Moss Carp
- Added Poolworm
- Added Verdant Bed
- Added Guide to Critter Companionship compatibility with all critters
- Added some unique interaction text for the Apotheosis
- Added Mysteria microbiome
	- Added Mysteria trees
	- Added Mysteria wood
	- Added Mysteria canopy
	- Added Mysteria acorns
	- Added Mysteria Flotie
	- Added Mysteria armor
	- Added Mysteria furniture
	- Added Mysteria drapes
- Added Crude Paintbrush
- Added proper Save/Load functionality to ForegroundItems
- Added Lush Sink
- Added Shears
- Added Bushes, which can be trimmed for variations
- Added Snail Statue

CHANGES
- Dryad no longer sells Yellow Bulbs in Hardmode after any mech has been defeated
- Sprite edits for:
	Yellow Bulb item
	Lush Vine Rope tile
	Lush Sapling
	Red Petal Block
	Pink Petal Block
- Beehives can be placed on all tiles
- Adjusted speed that foreground/background leaves fly at in wind
- Fixed ScreenText being drawn only when the mouse is drawn
- Moved ScreenText to new UI layer so other mods can modify it if they wish (it's called "Verdant: Screen Text")
- Fixed Beehives spawning too many bees
- Fixed Lush Wood merging with dirt
- Heavily nerfed how much Wisplant items grow Chlorophyte
- Buffed Magic-Infused Wisplant use time
- Increased Magic-Infused Wisplant recipe requirements
- Fixed Bumblebees not flipping sprite when roaming
- Unloaded Folifish in order to make way for new fishes
- Fixed Lush Wood Bed not working as a spawnpoint
- Made Lush Wood merge with all tiles
- Lush Saplings can now be planted in water
- Made Bouncebloom, Lightbulb held sprites show up in aftereffects
- Slightly adjusted Flotie spawn conditions & rates
- Significantly adjusted Flotie backend, minor changes throughout
- Improved ForegroundItem performance, will now only draw if they're on screen
- A lot of changes to Lush Furniture map colors
- Fixed Lush Sofa dropping a Lush Table
- A lot of item hitbox adjustments
- Changed VerdantTree IEntitySource to use EntitySource_ShakeTree