@@ -11,23 +11,27 @@ public class MysteriaHelmet : ModItem
 {
     public override void SetStaticDefaults()
     {
-        DisplayName.SetDefault("Mysteria Headdress");
-        Tooltip.SetDefault("+6 flat minion damage");
+        DisplayName.SetDefault("Mysteria Veil");
+        Tooltip.SetDefault("+4 flat minion damage");
     }
 
     public override void SetDefaults()
     {
-        Item.width = 30;
-        Item.height = 20;
+        Item.width = 22;
+        Item.height = 24;
         Item.value = 0;
         Item.rare = ItemRarityID.Green;
-        Item.defense = 5;
+        Item.defense = 4;
     }
 
-    public override bool IsArmorSet(Item head, Item body, Item legs) => body.type == ModContent.ItemType<VerdantChestplate>() && legs.type == ModContent.ItemType<MysteriaLeggings>();
+    public override bool IsArmorSet(Item head, Item body, Item legs) => body.type == ModContent.ItemType<MysteriaChest>() && legs.type == ModContent.ItemType<MysteriaLeggings>();
+    public override void UpdateEquip(Player player) => player.GetDamage(DamageClass.Summon).Flat += 4;
 
-    public override void UpdateArmorSet(Player player) => player.GetDamage(DamageClass.Summon).Flat += 6;
-    public override void UpdateEquip(Player player) => player.GetDamage(DamageClass.Summon).Flat += 6;
+    public override void UpdateArmorSet(Player player)
+    {
+        player.setBonus = "3 additional damage flat";
+        player.GetDamage(DamageClass.Summon).Flat += 3;
+    }
 
     public override void AddRecipes()
     {
