@@ -254,4 +254,95 @@ public static class TileHelper
         var newText = string.Concat("Time: ", intTime, ":", text2, " ", text);
         Main.NewText(newText + additionalText, 255, 240, 20);
     }
+
+    /// <summary>
+    /// Code from Vortex, thanks for slogging through vanilla to get this!
+    /// </summary>
+    public static void DrawSlopedGlowMask(int i, int j, Texture2D texture, Color drawColor, Vector2 positionOffset, Rectangle? frameOverride = null)
+    {
+        Tile tile = Main.tile[i, j];
+        int frameX = tile.TileFrameX;
+        int frameY = tile.TileFrameY;
+
+        if (frameOverride is not null)
+        {
+            frameX = frameOverride.Value.X;
+            frameY = frameOverride.Value.Y;
+        }
+
+        Point frameSize = frameOverride is not null ? frameOverride.Value.Size().ToPoint() : new Point(16, 16);
+        int width = frameSize.X;
+        int height = frameSize.Y;
+
+        Vector2 location = new(i * 16, j * 16);
+        Vector2 zero = Main.drawToScreen ? Vector2.Zero : new Vector2(Main.offScreenRange, Main.offScreenRange);
+        Vector2 offsets = -Main.screenPosition + zero + positionOffset;
+        Vector2 drawCoordinates = location + offsets;
+
+        if ((tile.Slope == 0 && !tile.IsHalfBlock) || (Main.tileSolid[tile.TileType] && Main.tileSolidTop[tile.TileType])) //second one should be for platforms
+            Main.spriteBatch.Draw(texture, drawCoordinates, new Rectangle(frameX, frameY, width, height), drawColor, 0f, Vector2.Zero, 1f, SpriteEffects.None, 0f);
+        else if (tile.IsHalfBlock)
+            Main.spriteBatch.Draw(texture, new Vector2(drawCoordinates.X, drawCoordinates.Y + 8), new Rectangle(frameX, frameY, width, 8), drawColor, 0f, Vector2.Zero, 1f, SpriteEffects.None, 0f);
+        else
+        {
+            var b = tile.Slope;
+            Rectangle frame;
+            Vector2 drawPos;
+
+            if (b == SlopeType.SlopeDownLeft || b == SlopeType.SlopeDownRight)
+            {
+                int length;
+                int height2;
+
+                for (int a = 0; a < 8; ++a)
+                {
+                    if (b == SlopeType.SlopeDownRight)
+                    {
+                        length = 16 - a * 2 - 2;
+                        height2 = 14 - a * 2;
+                    }
+                    else
+                    {
+                        length = a * 2;
+                        height2 = 14 - length;
+                    }
+
+                    frame = new Rectangle(frameX + length, frameY, 2, height2);
+                    drawPos = new Vector2(i * 16 + length, j * 16 + a * 2) + offsets;
+                    Main.spriteBatch.Draw(texture, drawPos, frame, drawColor, 0f, Vector2.Zero, 1f, SpriteEffects.None, 0.0f);
+                }
+
+                frame = new Rectangle(frameX, frameY + 14, width, 2);
+                drawPos = new Vector2(i * 16, j * 16 + 14) + offsets;
+                Main.spriteBatch.Draw(texture, drawPos, frame, drawColor, 0f, Vector2.Zero, 1f, SpriteEffects.None, 0.0f);
+            }
+            else
+            {
+                int length;
+                int height2;
+
+                for (int a = 0; a < 8; ++a)
+                {
+                    if (b == SlopeType.SlopeUpLeft)
+                    {
+                        length = a * 2;
+                        height2 = 16 - length;
+                    }
+                    else
+                    {
+                        length = 16 - a * 2 - 2;
+                        height2 = 16 - a * 2;
+                    }
+
+                    frame = new Rectangle(frameX + length, frameY + 16 - height2, 2, height2);
+                    drawPos = new Vector2(i * 16 + length, j * 16) + offsets;
+                    Main.spriteBatch.Draw(texture, drawPos, frame, drawColor, 0f, Vector2.Zero, 1f, SpriteEffects.None, 0.0f);
+                }
+
+                drawPos = new Vector2(i * 16, j * 16) + offsets;
+                frame = new Rectangle(frameX, frameY, 16, 2);
+                Main.spriteBatch.Draw(texture, drawPos, frame, drawColor, 0f, Vector2.Zero, 1f, SpriteEffects.None, 0.0f);
+            }
+        }
+    }
 }
