@@ -1,0 +1,20 @@
+﻿using Microsoft.Xna.Framework;
+using Terraria;
+using Terraria.ID;
+using Terraria.ModLoader;
+using Verdant.Items.Verdant.Blocks.Walls;
+
+namespace Verdant.Walls;
+
+public class MysteriaWoodWall : ModWall
+{
+    public override void SetStaticDefaults()
+    {
+        Main.wallHouse[Type] = true;
+        DustType = DustID.WoodFurniture;
+        ItemDrop = ModContent.ItemType<MysteriaWoodWallItem>();
+        AddMapEntry(new Color(107, 70, 50));
+    }
+
+    public override void NumDust(int i, int j, bool fail, ref int num) => num = fail ? 1 : 3;
+}
